admin consol UI update
for proper display, files should be put on a server

--- a/cometride-server/src/main/webapp/index.html
+++ b/cometride-server/src/main/webapp/index.html
@@ -229,8 +229,8 @@
                 </select>
                 <label class="control-label" for="status" id="feedback-status"></label>
             </div>
-            <input class="btn btn-success btn-block" type="submit" value="Start Drawing" />
-            <button class="btn btn-danger btn-block hide-sb">Cancel</button>
+            <input class="btn btn-panel btn-block" type="submit" value="Start Drawing" />
+            <button class="btn btn-panel btn-block hide-sb">Cancel</button>
         </form>
     </div>
     <!-- <div class="site-overlay"></div> -->
