--- a/cometride-server/src/main/webapp/index.html
+++ b/cometride-server/src/main/webapp/index.html
@@ -8,14 +8,12 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-    <link href="css/selectBoxIt.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/popups.css" rel="stylesheet">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/selectBoxIt.js"></script>
     <script src="js/script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
     <script>
@@ -205,7 +203,8 @@
 </head>
 
 <body>
-    <div class="pushy pushy-left">
+    <div class="create pushy pushy-left">
+    	<h1>Create a Route</h1>
         <form class="form">
             <div class="form-group has-feedback" id="nmbox">
                 <input class="invalid form-control" name="name" id="name" placeholder="Route Name" />
@@ -219,7 +218,7 @@
                     <option value="1">12:00AM - 17:00AM</option>
                     <option value="2">17:00AM - 22:00AM</option>
                 </select>
-                <label class="control-label" for="timeslot" id="feedback-timeslot"></label>
+                <!-- <label class="control-label" for="timeslot" id="feedback-timeslot"></label> -->
             </div>
             <div class="form-group has-feedback" id="stbox">
                 <select class="valid form-control" id="status" name="status">
@@ -227,11 +226,40 @@
                     <option value="0">Available</option>
                     <option value="1">Not Available</option>
                 </select>
-                <label class="control-label" for="status" id="feedback-status"></label>
+                <!-- <label class="control-label" for="status" id="feedback-status"></label> -->
             </div>
-            <input class="btn btn-panel btn-block" type="submit" value="Start Drawing" />
+            <input class="btn btn-panel btn-block btn-draw" type="submit" value="Start Drawing" />
             <button class="btn btn-panel btn-block hide-sb">Cancel</button>
         </form>
+    </div>
+    <div class="edit pushy pushy-left">
+    	<h1>Edit a Route</h1>
+    	<form class="form">
+            <div class="form-group has-feedback" id="nmbox">
+                <input class="invalid form-control" name="name" id="name" placeholder="Route Name" />
+                <span class="glyphicon form-control-feedback" aria-hidden="true" id="emicon"></span>
+                <!-- <label class="control-label" for="name" id="feedback-name"></label> -->
+            </div>
+            <div class="form-group has-feedback" id="tsbox">
+                <select class="valid form-control" id="timeslot" name="timeslot">
+                    <option value="-1">Time Slot</option>
+                    <option value="0">7:00AM - 12:00AM</option>
+                    <option value="1">12:00AM - 17:00AM</option>
+                    <option value="2">17:00AM - 22:00AM</option>
+                </select>
+                <!-- <label class="control-label" for="timeslot" id="feedback-timeslot"></label> -->
+            </div>
+            <div class="form-group has-feedback" id="stbox">
+                <select class="valid form-control" id="status" name="status">
+                    <option value="-1">Status</option>
+                    <option value="0">Available</option>
+                    <option value="1">Not Available</option>
+                </select>
+                <!-- <label class="control-label" for="status" id="feedback-status"></label> -->
+            </div>
+            <input class="btn btn-panel btn-block btn-draw" type="submit" value="Start Drawing" />
+    		<button class="btn btn-panel btn-block hide-sb">Cancel</button>
+    	</form>
     </div>
     <!-- <div class="site-overlay"></div> -->
     <!-- Navigation -->
@@ -262,7 +290,7 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <i class="fa fa-taxi"></i> Select A Route <b class="caret"></b>
+                            <i class="fa fa-taxi"></i> Select a Route <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Route A</a></li>
@@ -272,23 +300,23 @@
                             <li><a href="#">Route D</a></li>
                         </ul>
                     </li>
-                    <li id="create">
+                    <li class="create-btn">
                         <a href="#">
                             <i class="fa fa-paint-brush"></i>
                             <span class="btn-exp"> Create a route</span>
                         </a>
                     </li>
-                    <li id="edit" class="dropdown">
+                    <li class="dropdown">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <i class="fa fa-pencil-square-o"></i>
                             <span class="btn-exp"> Edit a route</span> <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Route A</a></li>
-                            <li><a href="#">Route B</a></li>
+                            <li class="edit-btn"><a href="#">Route A</a></li>
+                            <li class="edit-btn"><a href="#">Route B</a></li>
                             <!-- <li class="divider"></li> -->
-                            <li><a href="#">Route C</a></li>
-                            <li><a href="#">Route D</a></li>
+                            <li class="edit-btn"><a href="#">Route C</a></li>
+                            <li class="edit-btn"><a href="#">Route D</a></li>
                         </ul>
                     </li>
                     <li id="login" class="login-lst">
@@ -303,10 +331,10 @@
     <div id="container">
         <div id="map-canvas"></div>
     </div>
-    <!--     <div id="light" class="white_content">
+    <div id="light" class="white_content">
         <h1>test</h1>
     </div>
-    <div id="fade" class="black_overlay"></div> -->
+    <div id="fade" class="black_overlay"></div>
 </body>
 
 </html>
