--- a/cometride-server/src/main/webapp/index.html
+++ b/cometride-server/src/main/webapp/index.html
@@ -6,91 +6,227 @@
     <title>CometRide Admin Dashboard</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    <!-- plugin css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel='stylesheet' href='css/spectrum.css'>
+    <link rel="stylesheet" href="css/bootstrap-timepicker.css">
+    <link rel="stylesheet" href="css/dropdowns-enhancement.css">
+    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+    <!-- custom css -->
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/popups.css" rel="stylesheet">
+    <!-- plugin js -->
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="js/script.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+    <script src='js/spectrum.js'></script>
+    <script src='js/bootstrap-timepicker.js'></script>
+    <script src='js/dropdowns-enhancement.js'></script>
+    <script src='js/bootstrap-datepicker.js'></script>
+    <!-- custom css -->
+    <script src="js/script.js"></script>
     <script src="js/route.draw.js"></script>
-    
 </head>
 
 <body>
     <div class="create pushy pushy-left">
         <h1>Create a Route</h1>
         <div class="form">
-            <div class="form-group has-feedback" id="nmbox">
-                <input class="invalid form-control" name="name" id="name" placeholder="Route Name" />
-                <span class="glyphicon form-control-feedback" aria-hidden="true" id="emicon"></span>
-                <!-- <label class="control-label" for="name" id="feedback-name"></label> -->
+            <div id="basic-info" class="sb-box">
+                <label for="basic-info">
+                    <h4>Basic Info</h4>
+                </label>
+                <div id="info-container" class="sb-container">
+                    <div class="form-group" id="name-field">
+                        <input class="form-control" name="name" id="name" placeholder="Route Name" />
+                    </div>
+                    <div class="form-group" id="color-picker">
+                        <input class="form-control" type='text' id="color" />
+                        <!-- <label class="control-label" for="color" id="feedback-status"></label> -->
+                    </div>
+                    <div class="form-group" id="status-picker">
+                        <select class="form-control" id="status" name="status">
+                            <option value="-1">Status</option>
+                            <option value="0">Available</option>
+                            <option value="1">Not Available</option>
+                        </select>
+                        <!-- <label class="control-label" for="status" id="feedback-status"></label> -->
+                    </div>
+                    <div class="form-group" id="round-picker">
+                        <input type="checkbox" id="roundTrip" />
+                        <label class="label" for="roundTrip">Round Trip</label>
+                    </div>
+                </div>
             </div>
-            <div class="form-group has-feedback" id="tsbox">
-                <select class="valid form-control" id="timeslot" name="timeslot">
-                    <option value="-1">Time Slot</option>
-                    <option value="0">7:00AM - 12:00AM</option>
-                    <option value="1">12:00AM - 17:00AM</option>
-                    <option value="2">17:00AM - 22:00AM</option>
-                </select>
-                <!-- <label class="control-label" for="timeslot" id="feedback-timeslot"></label> -->
+            <div id="active-time" class="sb-box">
+                <label for="active-time">
+                    <h4>Active Time</h4></label>
+                <div id="time-container" class="sb-container">
+                    <div class="form-group btn-group" id="day-picker">
+                        <button data-toggle="dropdown" class="form-control dropdown-toggle" data-placeholder="Active Days">Active Days <span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <input type="checkbox" id="monday">
+                                <label for="monday" name="monday" value="monday">Monday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="tuesday">
+                                <label for="tuesday" name="tuesday" value="tuesday">Tuesday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="wednesday">
+                                <label for="wednesday" name="wednesday" value="wednesday">Wednesday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="thusday">
+                                <label for="thusday" name="thusday" value="thusday">Thusday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="friday">
+                                <label for="friday" name="friday" value="friday">Friday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="saturday">
+                                <label for="saturday" name="saturday" value="saturday">Saturday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="sunday">
+                                <label for="sunday" name="sunday" value="sunday">Sunday</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="form-group" id="time-picker">
+                        <div class='timepicker-set'>
+                            <input class='form-control timepicker start-time' placeholder='Start Time' />
+                            <p>to</p>
+                            <input class='form-control timepicker end-time' placeholder='End Time' />
+                        </div>
+                    </div>
+                    <div class="form-group" id="time-picker-buttons">
+                        <button id="plus-timepicker" class="btn btn-panel"><i class="fa fa-plus-circle"></i></button>
+                        <button id="minus-timepicker" class="btn btn-panel"><i class="fa fa-minus-circle"></i></button>
+                    </div>
+                </div>
             </div>
-            <div class="form-group has-feedback" id="cbox">
-                <select class="valid form-control" id="color" name="color">
-                    <option value="-1">Route Color</option>
-                    <option value="red">red</option>
-                    <option value="green">green</option>
-                    <option value="blue">blue</option>
-                </select>
-                <!-- <label class="control-label" for="color" id="feedback-status"></label> -->
-            </div>
-            <div class="form-group has-feedback" id="stbox">
-                <select class="valid form-control" id="status" name="status">
-                    <option value="-1">Status</option>
-                    <option value="0">Available</option>
-                    <option value="1">Not Available</option>
-                </select>
-                <!-- <label class="control-label" for="status" id="feedback-status"></label> -->
-            </div>
-            <div>
-                <input type="checkbox" id="roundTrip" />
-                <label class="label" for="roundTrip">Round Trip</label>
+            <div id="active-date" class="sb-box">
+                <label for="active-date">
+                    <h4>Active Date</h4></label>
+                <div id="date-container" class="sb-container">
+                    <div class="form-group">
+                        <input type="checkbox" id="temporary-flag" />
+                        <label class="label" for="temporary-flag">Temporary Route</label>
+                    </div>
+                    <div class="form-group" id="date-picker">
+                        <input type="text" class="form-control" placeholder="Starting Date" />
+                        <input type="text" class="form-control" placeholder="End Date" />
+                    </div>
+                </div>
             </div>
             <button id="btn-draw" class="btn btn-panel btn-block">Start Drawing</button>
-            <button id="btn-save" class="btn btn-panel btn-half-block">Save</button>
-            <button id="btn-reverse" class="btn btn-panel btn-half-block">Reverse</button>
+            <button id="btn-save" class="btn btn-panel half-block">Save</button>
+            <button id="btn-reverse" class="btn btn-panel half-block">Reverse</button>
             <button id="hide-sb" class="btn btn-panel btn-block">Close</button>
         </div>
     </div>
     <div class="edit pushy pushy-left">
         <h1>Edit a Route</h1>
         <div class="form">
-            <div class="form-group has-feedback" id="nmbox">
-                <input class="invalid form-control" name="name" id="name" placeholder="Route Name" />
-                <span class="glyphicon form-control-feedback" aria-hidden="true" id="emicon"></span>
-                <!-- <label class="control-label" for="name" id="feedback-name"></label> -->
+            <div id="basic-info" class="sb-box">
+                <label for="basic-info">
+                    <h4>Basic Info</h4>
+                </label>
+                <div id="info-container" class="sb-container">
+                    <div class="form-group" id="name-field">
+                        <input class="form-control" name="name" id="name" placeholder="Route Name" />
+                    </div>
+                    <div class="form-group" id="color-picker">
+                        <input class="form-control" type='text' id="color" />
+                        <!-- <label class="control-label" for="color" id="feedback-status"></label> -->
+                    </div>
+                    <div class="form-group" id="status-picker">
+                        <select class="form-control" id="status" name="status">
+                            <option value="-1">Status</option>
+                            <option value="0">Available</option>
+                            <option value="1">Not Available</option>
+                        </select>
+                        <!-- <label class="control-label" for="status" id="feedback-status"></label> -->
+                    </div>
+                    <div class="form-group" id="round-picker">
+                        <input type="checkbox" id="roundTrip" />
+                        <label class="label" for="roundTrip">Round Trip</label>
+                    </div>
+                </div>
             </div>
-            <div class="form-group has-feedback" id="tsbox">
-                <select class="valid form-control" id="timeslot" name="timeslot">
-                    <option value="-1">Time Slot</option>
-                    <option value="0">7:00AM - 12:00AM</option>
-                    <option value="1">12:00AM - 17:00AM</option>
-                    <option value="2">17:00AM - 22:00AM</option>
-                </select>
-                <!-- <label class="control-label" for="timeslot" id="feedback-timeslot"></label> -->
+            <div id="active-time" class="sb-box">
+                <label for="active-time">
+                    <h4>Active Time</h4></label>
+                <div id="time-container" class="sb-container">
+                    <div class="form-group btn-group" id="day-picker">
+                        <button data-toggle="dropdown" class="form-control dropdown-toggle" data-placeholder="Active Days">Active Days <span class="caret"></span></button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <input type="checkbox" id="monday">
+                                <label for="monday" name="monday" value="monday">Monday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="tuesday">
+                                <label for="tuesday" name="tuesday" value="tuesday">Tuesday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="wednesday">
+                                <label for="wednesday" name="wednesday" value="wednesday">Wednesday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="thusday">
+                                <label for="thusday" name="thusday" value="thusday">Thusday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="friday">
+                                <label for="friday" name="friday" value="friday">Friday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="saturday">
+                                <label for="saturday" name="saturday" value="saturday">Saturday</label>
+                            </li>
+                            <li>
+                                <input type="checkbox" id="sunday">
+                                <label for="sunday" name="sunday" value="sunday">Sunday</label>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="form-group" id="time-picker">
+                        <div class='timepicker-set'>
+                            <input class='form-control timepicker start-time' placeholder='Start Time' />
+                            <p>to</p>
+                            <input class='form-control timepicker end-time' placeholder='End Time' />
+                        </div>
+                    </div>
+                    <div class="form-group" id="time-picker-buttons">
+                        <button id="plus-timepicker" class="btn btn-panel"><i class="fa fa-plus-circle"></i></button>
+                        <button id="minus-timepicker" class="btn btn-panel"><i class="fa fa-minus-circle"></i></button>
+                    </div>
+                </div>
             </div>
-            <div class="form-group has-feedback" id="stbox">
-                <select class="valid form-control" id="status" name="status">
-                    <option value="-1">Status</option>
-                    <option value="0">Available</option>
-                    <option value="1">Not Available</option>
-                </select>
-                <!-- <label class="control-label" for="status" id="feedback-status"></label> -->
+            <div id="active-date" class="sb-box">
+                <label for="active-date">
+                    <h4>Active Date</h4></label>
+                <div id="date-container" class="sb-container">
+                    <div class="form-group">
+                        <input type="checkbox" id="temporary-flag" />
+                        <label class="label" for="temporary-flag">Temporary Route</label>
+                    </div>
+                    <div class="form-group" id="date-picker">
+                        <input type="text" class="form-control" placeholder="Starting Date" />
+                        <input type="text" class="form-control" placeholder="End Date" />
+                    </div>
+                </div>
             </div>
-            <input id="btn-edit" class="btn btn-panel btn-block" type="submit" value="Start Drawing" />
+            <button id="btn-draw" class="btn btn-panel btn-block">Start Drawing</button>
+            <button id="btn-save" class="btn btn-panel half-block">Save</button>
+            <button id="btn-reverse" class="btn btn-panel half-block">Reverse</button>
             <button id="hide-sb" class="btn btn-panel btn-block">Close</button>
         </div>
     </div>
