admin console Show Cabs!

--- a/cometride-server/src/main/webapp/index.html
+++ b/cometride-server/src/main/webapp/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/bootstrap-timepicker.css">
     <link rel="stylesheet" href="css/dropdowns-enhancement.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="css/bootstrap-multiselect.css">
     <!-- custom css -->
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/popups.css" rel="stylesheet">
@@ -26,11 +27,12 @@
     <script src='js/bootstrap-timepicker.js'></script>
     <script src='js/dropdowns-enhancement.js'></script>
     <script src='js/bootstrap-datepicker.js'></script>
+    <script src='js/bootstrap-multiselect.js'></script>
     <!-- custom css -->
     <script src="js/script.js"></script>
     <script src="js/route.draw.js"></script>
-    <!--<script src="js/route.display.js"></script>-->
-    <script src="js/login.js"></script>
+    <script src="js/route.display.js"></script>
+    <!--<script src="js/login.js"></script>-->
 </head>
 
 <body>
@@ -65,7 +67,8 @@
             </div>
             <div id="active-time" class="sb-box">
                 <label for="active-time">
-                    <h4>Active Time</h4></label>
+                    <h4>Active Time</h4>
+                </label>
                 <div id="time-container" class="sb-container">
                     <div class="form-group btn-group" id="day-picker">
                         <button data-toggle="dropdown" class="form-control dropdown-toggle" data-placeholder="Active Days">Active Days</button>
@@ -250,7 +253,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <button id="login" class="btn btn-sm btn-flat login-btn">
-                    <a href="#">Admin Login</a>
+                    <a href="admin.html">Admin Login</a>
                 </button>
                 <a href="#">
                     <img class="logo img-responsive" src="img/logo.png" />
@@ -263,18 +266,22 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navHeaderCollapse">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <i class="fa fa-taxi"></i> Select a Route <b class="caret"></b>
+                <ul class="nav navbar-nav" id="navs">
+                    <!-- <li class="dropdown" id="selectRoute">
+                        <a data-toggle="dropdown" class="dropdown-toggle" data-placeholder="" href="#">
+                            <i class="fa fa-taxi"></i> Select a Route
                         </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Route A</a></li>
-                            <li><a href="#">Route B</a></li>
-                            <!-- <li class="divider"></li> -->
-                            <li><a href="#">Route C</a></li>
-                            <li><a href="#">Route D</a></li>
+                        <b class="caret"></b>
+                        <ul class="dropdown-menu" id="selectRouteList">
+                            <li class="noroute">
+                                <input type="checkbox">
+                                <label>No Route Available</label>
+                            </li>
                         </ul>
+                    </li> -->
+                    <li id="selectRoute">
+                        <select id="selectRouteList" multiple="multiple">
+                        </select>
                     </li>
                     <li class="create-btn">
                         <a href="#">
@@ -282,21 +289,14 @@
                             <span class="btn-exp"> Create a route</span>
                         </a>
                     </li>
-                    <li class="dropdown">
+                    <li class="dropdown" id="editRoute">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <i class="fa fa-pencil-square-o"></i>
                             <span class="btn-exp"> Edit a route</span> <b class="caret"></b>
                         </a>
-                        <ul class="dropdown-menu">
-                            <li class="edit-btn"><a href="#">Route A</a></li>
-                            <li class="edit-btn"><a href="#">Route B</a></li>
-                            <!-- <li class="divider"></li> -->
-                            <li class="edit-btn"><a href="#">Route C</a></li>
-                            <li class="edit-btn"><a href="#">Route D</a></li>
+                        <ul class="dropdown-menu" id="editRouteList">
+                            <li class="edit-btn noroute"><a href="#">No Route Available</a></li>
                         </ul>
-                    </li>
-                    <li id="login" class="login-lst">
-                        <a href="#">Admin Login</a>
                     </li>
                 </ul>
             </div>
