edit 50% done. draw route fixed.

--- a/cometride-server/src/main/webapp/index.html
+++ b/cometride-server/src/main/webapp/index.html
@@ -2,7 +2,6 @@
 <html>
 
 <head>
-    <!--TODO: Consider for animation of markers: https://github.com/terikon/marker-animate-unobtrusive#install-->
     <title>CometRide Admin Dashboard</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
@@ -14,6 +13,7 @@
     <link rel="stylesheet" href="css/dropdowns-enhancement.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="css/bootstrap-multiselect.css">
+    <link rel="stylesheet" href="css/jquery.dynatable.css">
     <!-- custom css -->
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/popups.css" rel="stylesheet">
@@ -28,14 +28,14 @@
     <script src='js/dropdowns-enhancement.js'></script>
     <script src='js/bootstrap-datepicker.js'></script>
     <script src='js/bootstrap-multiselect.js'></script>
-    <!-- custom css -->
-    <script src="js/script.js"></script>
-    <script src="js/route.draw.js"></script>
-    <script src="js/route.display.js"></script>
-    <!--<script src="js/login.js"></script>-->
+    <script src='js/jquery.dynatable.js'></script>
+    <!-- custom js -->
+    <script src="js/ui.js"></script>
+    <script src="js/route.js"></script>
 </head>
 
 <body>
+    <!-- Create Route Side Bar -->
     <div class="create pushy pushy-left">
         <h1>Create a Route</h1>
         <div class="form">
@@ -86,8 +86,8 @@
                                 <label for="wednesday">Wednesday</label>
                             </li>
                             <li>
-                                <input type="checkbox" id="thusday" name="thusday" value="Thusday">
-                                <label for="thusday">Thusday</label>
+                                <input type="checkbox" id="thursday" name="thursday" value="Thursday">
+                                <label for="thursday">Thursday</label>
                             </li>
                             <li>
                                 <input type="checkbox" id="friday" name="friday" value="Friday">
@@ -132,12 +132,13 @@
                 </div>
             </div>
             <button id="btn-draw" class="btn btn-panel btn-block">Start Drawing</button>
-            <button id="btn-actual-draw" class="btn btn-panel half-block">Draw</button>
+            <!-- <button id="btn-actual-draw" class="btn btn-panel half-block">Draw</button> -->
             <button id="btn-reverse" class="btn btn-panel half-block">Reverse</button>
-            <button id="btn-save" class="btn btn-panel btn-block">Save</button>
+            <button id="btn-save" class="btn btn-panel half-block">Finish</button>
             <button id="hide-sb" class="btn btn-panel btn-block">Close</button>
         </div>
     </div>
+    <!-- Edit Route Side Bar -->
     <div class="edit pushy pushy-left">
         <h1>Edit a Route</h1>
         <div class="form">
@@ -172,35 +173,35 @@
                     <h4>Active Time</h4></label>
                 <div id="time-container" class="sb-container">
                     <div class="form-group btn-group" id="day-picker">
-                        <button data-toggle="dropdown" class="form-control dropdown-toggle" data-placeholder="Active Days">Active Days <span class="caret"></span></button>
+                        <button data-toggle="dropdown" class="form-control dropdown-toggle" data-placeholder="Active Days">Active Days</button>
                         <ul class="dropdown-menu">
                             <li>
-                                <input type="checkbox" id="monday">
-                                <label for="monday" name="monday" value="monday">Monday</label>
+                                <input type="checkbox" id="monday1">
+                                <label for="monday1" name="monday" value="monday">Monday</label>
                             </li>
                             <li>
-                                <input type="checkbox" id="tuesday">
-                                <label for="tuesday" name="tuesday" value="tuesday">Tuesday</label>
+                                <input type="checkbox" id="tuesday1">
+                                <label for="tuesday1" name="tuesday" value="tuesday">Tuesday</label>
                             </li>
                             <li>
-                                <input type="checkbox" id="wednesday">
-                                <label for="wednesday" name="wednesday" value="wednesday">Wednesday</label>
+                                <input type="checkbox" id="wednesday1">
+                                <label for="wednesday1" name="wednesday" value="wednesday">Wednesday</label>
                             </li>
                             <li>
-                                <input type="checkbox" id="thusday">
-                                <label for="thusday" name="thusday" value="thusday">Thusday</label>
+                                <input type="checkbox" id="thursday1">
+                                <label for="thursday1" name="thursday" value="thursday">Thursday</label>
                             </li>
                             <li>
-                                <input type="checkbox" id="friday">
-                                <label for="friday" name="friday" value="friday">Friday</label>
+                                <input type="checkbox" id="friday1">
+                                <label for="friday1" name="friday" value="friday">Friday</label>
                             </li>
                             <li>
-                                <input type="checkbox" id="saturday">
-                                <label for="saturday" name="saturday" value="saturday">Saturday</label>
+                                <input type="checkbox" id="saturday1">
+                                <label for="saturday1" name="saturday" value="saturday">Saturday</label>
                             </li>
                             <li>
-                                <input type="checkbox" id="sunday">
-                                <label for="sunday" name="sunday" value="sunday">Sunday</label>
+                                <input type="checkbox" id="sunday1">
+                                <label for="sunday1" name="sunday" value="sunday">Sunday</label>
                             </li>
                         </ul>
                     </div>
@@ -233,14 +234,13 @@
                     </div>
                 </div>
             </div>
-            <button id="btn-draw" class="btn btn-panel btn-block">Start Drawing</button>
-            <button id="btn-actual-draw" class="btn btn-panel half-block">Draw</button>
+            <button id="btn-draw" class="btn btn-panel btn-block">Redraw</button>
+            <!-- <button id="btn-actual-draw" class="btn btn-panel half-block">Draw</button> -->
             <button id="btn-reverse" class="btn btn-panel half-block">Reverse</button>
-            <button id="btn-save" class="btn btn-panel btn-block">Save</button>
+            <button id="btn-save" class="btn btn-panel half-block">Finish</button>
             <button id="hide-sb" class="btn btn-panel btn-block">Close</button>
         </div>
     </div>
-    <!-- <div class="site-overlay"></div> -->
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -267,36 +267,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="navHeaderCollapse">
                 <ul class="nav navbar-nav" id="navs">
-                    <!-- <li class="dropdown" id="selectRoute">
-                        <a data-toggle="dropdown" class="dropdown-toggle" data-placeholder="" href="#">
-                            <i class="fa fa-taxi"></i> Select a Route
-                        </a>
-                        <b class="caret"></b>
-                        <ul class="dropdown-menu" id="selectRouteList">
-                            <li class="noroute">
-                                <input type="checkbox">
-                                <label>No Route Available</label>
-                            </li>
-                        </ul>
-                    </li> -->
                     <li id="selectRoute">
                         <select id="selectRouteList" multiple="multiple">
                         </select>
-                    </li>
-                    <li class="create-btn">
-                        <a href="#">
-                            <i class="fa fa-paint-brush"></i>
-                            <span class="btn-exp"> Create a route</span>
-                        </a>
-                    </li>
-                    <li class="dropdown" id="editRoute">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <i class="fa fa-pencil-square-o"></i>
-                            <span class="btn-exp"> Edit a route</span> <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu" id="editRouteList">
-                            <li class="edit-btn noroute"><a href="#">No Route Available</a></li>
-                        </ul>
                     </li>
                 </ul>
             </div>
@@ -304,34 +277,10 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+    <!-- Map Canvas -->
     <div id="container">
         <div id="map-canvas"></div>
     </div>
-    <!-- <div id="light" class="white_content container">
-        <div class="card card-container">
-        <div id="close-login">
-            <i class="fa fa-cross"></i>
-        </div>
-            <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
-            <p id="profile-name" class="profile-name-card"></p>
-            <form class="form-signin">
-                <span id="reauth-email" class="reauth-email"></span>
-                <input type="email" id="inputUsername" name="inputUsername" class="form-control" placeholder="Email address" required autofocus>
-                <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required>
-                <div id="remember" class="checkbox">
-                    <label>
-                        <input type="checkbox" value="remember-me"> Remember me
-                    </label>
-                </div>
-                <button id="actual-login"class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
-            </form>
-            <a href="#" class="forgot-password">
-                Forgot the password?
-            </a>
-            <div id="error"></div>
-        </div>
-    </div>
-    <div id="fade" class="black_overlay"></div> -->
 </body>
 
 </html>
