--- a/cometride-server/src/main/webapp/admin.html
+++ b/cometride-server/src/main/webapp/admin.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='css/spectrum.css'>
-    <link rel="stylesheet" href="css/bootstrap-timepicker.css">
     <link rel="stylesheet" href="css/dropdowns-enhancement.css">
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="css/bootstrap-multiselect.css">
     <link rel="stylesheet" href="css/jquery.dynatable.css">
+    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="css/jquery.timepicker.css">
     <!-- custom css -->
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/popups.css" rel="stylesheet">
@@ -24,11 +24,11 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
     <script src='js/spectrum.js'></script>
-    <script src='js/bootstrap-timepicker.js'></script>
     <script src='js/dropdowns-enhancement.js'></script>
-    <script src='js/bootstrap-datepicker.js'></script>
     <script src='js/bootstrap-multiselect.js'></script>
     <script src='js/jquery.dynatable.js'></script>
+    <script src='js/bootstrap-datepicker.js'></script>
+    <script src='js/jquery.timepicker.js'></script>
     <!-- custom js -->
     <script src="js/ui.js"></script>
     <script src="js/route.js"></script>
@@ -134,6 +134,8 @@
             <button id="btn-draw" class="btn btn-panel btn-block">Start Drawing</button>
             <!-- <button id="btn-actual-draw" class="btn btn-panel half-block">Draw</button> -->
             <button id="btn-reverse" class="btn btn-panel half-block">Reverse</button>
+            <button id="btn-reverse-points" class="btn btn-panel half-block">Reverse</button>
+            <button id="btn-draw-points" class="btn btn-panel half-block">Draw Safepoints</button>
             <button id="btn-save" class="btn btn-panel half-block">Finish</button>
             <button id="hide-sb" class="btn btn-panel btn-block">Close</button>
         </div>
@@ -156,9 +158,9 @@
                     </div>
                     <div class="form-group" id="status-picker">
                         <select class="form-control" id="status" name="status">
-                            <option value="-1">Status</option>
-                            <option value="0">Available</option>
-                            <option value="1">Not Available</option>
+                            <option value="N/A">Status</option>
+                            <option value="Available">Available</option>
+                            <option value="NotAvailable">Not Available</option>
                         </select>
                         <!-- <label class="control-label" for="status" id="feedback-status"></label> -->
                     </div>
@@ -237,6 +239,8 @@
             <button id="btn-draw" class="btn btn-panel btn-block">Redraw</button>
             <!-- <button id="btn-actual-draw" class="btn btn-panel half-block">Draw</button> -->
             <button id="btn-reverse" class="btn btn-panel half-block">Reverse</button>
+            <button id="btn-reverse-points" class="btn btn-panel half-block">Reverse</button>
+            <button id="btn-draw-points" class="btn btn-panel half-block">Draw Safepoints</button>
             <button id="btn-save" class="btn btn-panel half-block">Finish</button>
             <button id="hide-sb" class="btn btn-panel btn-block">Close</button>
         </div>
@@ -272,13 +276,13 @@
                         </select>
                     </li>
                     <li class="create-btn">
-                        <a href="#">
+                        <a href="#" data-toggle="tooltip" data-placement="bottom" title="Create Routes">
                             <i class="fa fa-paint-brush"></i>
                             <span class="btn-exp"> Create a route</span>
                         </a>
                     </li>
                     <li class="dropdown" id="editRoute">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                        <a data-toggle="dropdown" class="dropdown-toggle" href="#" data-toggle="tooltip" data-placement="bottom" title="Edit Routes">
                             <i class="fa fa-pencil-square-o"></i>
                             <span class="btn-exp"> Edit a route</span> <b class="caret"></b>
                         </a>
@@ -287,9 +291,9 @@
                         </ul>
                     </li>
                     <li id="stats-btn">
-                        <a href="report.html">
+                        <a href="report.html" data-toggle="tooltip" data-placement="bottom" title="View statistics">
                             <i class="fa fa-sort-amount-desc"></i>
-                            <span class="btn-exp"> View Statistics </span>
+                            <span class="btn-exp"> View Statistics</span>
                         </a>
                     </li>
                 </ul>
