--- a/cometride-server/src/main/webapp/index.html
+++ b/cometride-server/src/main/webapp/index.html
@@ -9,11 +9,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel='stylesheet' href='css/spectrum.css'>
-    <link rel="stylesheet" href="css/bootstrap-timepicker.css">
     <link rel="stylesheet" href="css/dropdowns-enhancement.css">
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
     <link rel="stylesheet" href="css/bootstrap-multiselect.css">
     <link rel="stylesheet" href="css/jquery.dynatable.css">
+    <link rel="stylesheet" href="css/jquery.timepicker.css">
     <!-- custom css -->
     <link href="css/styles.css" rel="stylesheet">
     <link href="css/popups.css" rel="stylesheet">
@@ -24,11 +23,10 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
     <script src='js/spectrum.js'></script>
-    <script src='js/bootstrap-timepicker.js'></script>
     <script src='js/dropdowns-enhancement.js'></script>
-    <script src='js/bootstrap-datepicker.js'></script>
     <script src='js/bootstrap-multiselect.js'></script>
     <script src='js/jquery.dynatable.js'></script>
+    <script src='js/jquery.timepicker.js'></script>
     <!-- custom js -->
     <script src="js/ui.js"></script>
     <script src="js/route.js"></script>
