--- a/cometride-server/src/main/webapp/admin.html
+++ b/cometride-server/src/main/webapp/admin.html
@@ -47,6 +47,9 @@
                     <div class="form-group" id="name-field">
                         <input class="form-control" name="name" id="name" placeholder="Route Name" />
                     </div>
+                    <div class="form-group" id="shortname-field">
+                        <input class="form-control" name="shortname" id="shortname" placeholder="Route Short Name" />
+                    </div>
                     <div class="form-group" id="color-picker">
                         <input class="form-control" type='text' id="color" />
                         <!-- <label class="control-label" for="color" id="feedback-status"></label> -->
@@ -151,6 +154,9 @@
                 <div id="info-container" class="sb-container">
                     <div class="form-group" id="name-field">
                         <input class="form-control" name="name" id="name" placeholder="Route Name" />
+                    </div>
+                    <div class="form-group" id="shortname-field">
+                        <input class="form-control" name="shortname" id="shortname" placeholder="Route Short Name" />
                     </div>
                     <div class="form-group" id="color-picker">
                         <input class="form-control" type='text' id="color" />
@@ -295,6 +301,9 @@
                             <i class="fa fa-sort-amount-desc"></i>
                             <span class="btn-exp"> View Statistics</span>
                         </a>
+                    </li>
+                    <li id="showAllRoutes">
+                        Show Inactive Routes<input type="checkbox" id="showAllRoutesCheck">
                     </li>
                 </ul>
             </div>
