Updated emulator to do passenger variance. Updated route.js to handle new cabs. Route.js still does not delete old cabs that are no longer active.

--- a/cometride-server/src/main/webapp/index.html
+++ b/cometride-server/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>CometRide Admin Dashboard</title>
+    <title>CometRide</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
     <!-- plugin css -->
