Created new files for emulators. Cleaned up some web stuff.

--- a/cometride-server/src/main/webapp/admin.html
+++ b/cometride-server/src/main/webapp/admin.html
@@ -307,7 +307,7 @@
                         </a>
                     </li>
                     <li id="usermng-btn">
-                        <a href="#" data-toggle="tooltip" data-placement="bottom" title="Manage users">
+                        <a href="#" data-toggle="tooltip" data-placement="bottom" title="Manage Users">
                             <i class="fa fa-user"></i>
                             <span class="btn-exp"> Manage Users</span>
                         </a>
@@ -335,7 +335,7 @@
     <!-- Popup -->
     <div id="usermng-popup" class="popup panel panel-default">
         <div class="panel-heading">
-            <h4>Manager Users<a href="#" id="usermng-popup-close-btn" class="pull-right">
+            <h4>Manage Users<a href="#" id="usermng-popup-close-btn" class="pull-right">
                 <i class="fa fa-times"></i>
             </a></h4>
         </div>
@@ -373,7 +373,7 @@
     </div>
     <div id="cabmng-popup" class="popup panel panel-default">
         <div class="panel-heading">
-            <h4>Manager Cab Types<a href="#" id="cabmng-popup-close-btn" class="pull-right">
+            <h4>Manage Cab Types<a href="#" id="cabmng-popup-close-btn" class="pull-right">
                 <i class="fa fa-times"></i>
             </a></h4>
         </div>
