--- a/cometride-server/src/main/webapp/admin.html
+++ b/cometride-server/src/main/webapp/admin.html
@@ -363,7 +363,7 @@
                 <div class="form-group">
                     <label for="newRoles">Roles: </label>
                     <select id="newRoles" class="form-control" multiple="multiple">
-                        <option value="cometride-admin">cometride-admin</option>
+                        <option value="administrator">cometride-admin</option>
                         <option value="driver">driver</option>
                     </select>
                 </div>
